update till ex5

--- a/index.html
+++ b/index.html
@@ -14,23 +14,78 @@
 </head>
 
 <body>
+    <p>
+        <h5>I-blocs positioning</h5>
+    </p>
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                12 colonnes
+            <div class="col-12">12 colonnes
                 <div class="row">
-                    <div class="offset-md-1 col-md-2">
-                        Coucou
-                    </div>
-                    <div class="offset-md-2 col-md-3">
-                        ca
-                    </div>
-                    <div class="offset-md-2 col-md-2">
-                        va?
-                    </div>
+                    <div class="offset-md-1 col-md-2">Coucou</div>
+                    <div class="offset-md-2 col-md-3">ca</div>
+                    <div class="offset-md-2 col-md-2">va?</div>
                 </div>
             </div>
         </div>
+    </div>
+    <p>
+        <h5>II-imbricated elements</h5>
+    </p>
+    <div class="container">
+        <div class="row align-items-start">
+            <div class="col-md-3">Nouvel</div>
+            <div class="col-md-9">Exercice
+                <div class="row">
+                    <div class="col-md-3">ces</div>
+                    <div class="col-md-6">blocs sont tous</div>
+                    <div class="col-md-3">dans</div>
+                    <div class="col-md-4">la meme</div>
+                    <div class="col-md-4">div ou est</div>
+                    <div class="col-md-4">inscrit"Exercice"</div>
+                    <div class="col-md-5">comment</div>
+                    <div class="col-md-2">est</div>
+                    <div class="col-md-5">ce possible?</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <p>
+        <h5>III-change elements order</h5>
+    </p>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">12 colonnes
+                <div class="row">
+                    <div class="offset-md-1 col-md-2 ">Bloc 1 de 2</div>
+                    <div class="offset-md-2 col-md-2 order-3">Bloc 2 de 2</div>
+                    <div class="offset-md-2 col-md-2 order-2">Bloc 3 de 2</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <p>
+        <h5>IV-practice makes good</h5>
+    </p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">6 colonnes
+                <div class="row">
+                    <div class="col-md-4">4 colonnes</div>
+                    <div class="offset-md-4 col-md-4">4 colonnes</div>
+                </div>
+            </div>
+            <div class="col-md-6">6 colonnes
+                <div class="row">
+                    <div class="col-md-4">4 colonnes</div>
+                    <div class="col-md-8">8 colonnes</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <p>
+        <h5>V-responsive layout</h5>
+    </p>
+
 </body>
 
 </html>
